# text-score

./: Cargo.toml  LICENSE  README.md
src/: commons.rs  lib.rs  rouge.rs
tests/: test_commons.rs  test_rouge.rs
